--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <div class="tp-banner-container">
   <div class="tp-banner" >
     <ul>
-      <li data-slotamount="7" data-transition="3dcurtain-horizontal" data-masterspeed="1000" data-saveperformance="on"> <img alt="" src="images/dummy.png" data-lazyload="images/banner3.jpg">
+      <li data-slotamount="7" data-transition="3dcurtain-horizontal" data-masterspeed="1000" data-saveperformance="on"> <img alt="" src="images/dummy.png" data-lazyload="images/banner3.jpeg">
         <div class="caption lft large-title tp-resizeme slidertext2" data-x="center" data-y="235" data-speed="600" data-start="1000"> Sit Well</div>
         <div class="caption lfl large-title tp-resizeme slidertext1" data-x="center" data-y="270" data-speed="600" data-start="1600"> Interior & Furniture</div>
         <div class="caption lft large-title tp-resizeme slidertext3" data-x="center" data-y="370" data-speed="600" data-start="2200"> Well Crafted Furniture And Peacfully desinged Interiors<br/>
@@ -152,7 +152,7 @@
           </div>
           <div class="col-md-4 col-sm-4 welcome-box">
             <div class="houseIcon"><img src="images/house3.png" alt=""></div>
-            <h4>Home And Office Interior</h4>
+            <h4>Interior Decorater</h4>
             <p></p>
           </div>
         </div>
