--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           Royal and Rich Designs.</div>
         <div class="caption lfb large-title tp-resizeme slidertext4" data-x="center" data-y="440" data-speed="600" data-start="2800"><a href="#" class="slidebtn">Contact US <i class="fa fa-arrow-right" aria-hidden="true"></i></a></div>
       </li>
-      <li data-slotamount="7" data-transition="slotzoom-horizontal" data-masterspeed="1000" data-saveperformance="on"> <img alt="" src="images/dummy.png" data-lazyload="images/banner.jpg">
+      <li data-slotamount="7" data-transition="slotzoom-horizontal" data-masterspeed="1000" data-saveperformance="on"> <img alt="" src="images/dummy.png" data-lazyload="images/banner.jpeg">
         <div class="caption lft large-title tp-resizeme slidertext2" data-x="center" data-y="235" data-speed="600" data-start="1000"> Interior & Furniture</div>
         <div class="caption lfl large-title tp-resizeme slidertext1" data-x="center" data-y="270" data-speed="600" data-start="1600"> Sit Well</div>
         <div class="caption lft large-title tp-resizeme slidertext3" data-x="center" data-y="370" data-speed="600" data-start="2200">Well Crafted Furniture And Peacfully desinged Interiors<br/>
