--- a/index.html
+++ b/index.html
@@ -33,13 +33,15 @@
 <!--header start-->
 <div class="header-wrap">
   <div class="container">
-    <div class="navigationwrape">
+    <div class="navigationwrap">
       <div class="navbar navbar-default" role="navigation">
         <div class="row">
           <div class="col-md-3 col-sm-12">
-            <div class="logo"><a href="index-2.html"><img src="images/logo.png" alt=""></a></div>
+            <div class="logo"><a href="index.html"><img src="images/logo.png" alt=""></a></div>
             <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                 <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span>
+                  <span class="icon-bar"></span> </button>
             </div>
           </div>
           <div class="col-md-1 col-sm-2 pull-right"> 
@@ -571,10 +573,10 @@
 
 <!-- Counter --> 
 <script src="js/counter.html"></script> 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 <!-- general script file --> 
 <script type="text/javascript" src="js/script.js"></script>
 </body>
 
-<!-- Mirrored from malikhassan.com/html/interior-design/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 16 Aug 2022 13:47:41 GMT -->
 </html>
